2007-10-28  Steve Frécinaux  <code@istique.net>

	Fix bug #484613 by adding viewport support to gedit.

	* gedit/gedit-utils.[ch]: New utility function
	gedit_utils_get_current_viewport().

	* gedit/gedit-app.[ch]: Rename gedit_app_get_window_in_workspace() into
	gedit_app_get_window_in_viewport and add viewport support to it.

	* gedit/gedit.c: Adapt IPC protocol to specify the current viewport to
	the running instance.

2007-10-28  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-utils.[ch]:
	* gedit/gedit-window.c:

	Simply use g_strdelimit instead of a cutsom function to escape slashes.

=== gedit 2.20.3 ===

2007-10-18  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.20.3 released

2007-10-17  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-local-document-saver.c: fix permissions and ownership
	saving in the save-tmp-and-swap strategy. Bug #468578.

=== gedit 2.20.2 ===

2007-10-15  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.20.2 released

2007-10-11  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-file-chooser-dialog.c:
	* gedit/gedit-language-manager.c:

	check language ids array for nullness.

2007-10-09  Curtis Hovey  <sinzui.is@verizon.net>

	* plugins/externaltools/tools/functions.py: Added missing
	Language_Mangager argument. Fix bug 484913.

2007-10-07  Curtis Hovey  <sinzui.is@verizon.net>

	* plugins/externaltools/tools/library.py: load tool property if
	it is not already in _properties. Fix bug 484318.

2007-10-06  Paolo Borelli  <pborelli@katamail.com>

        * gedit/dialogs/gedit-preferences-dialog.glade: mark string as
	translatable. Patch by Takao Fujiwara.

2007-09-28  Paolo Borelli  <pborelli@katamail.com>

        * gedit/gedit-tab.c: focus the textview when closing the print
	preview or cancelling the print. Fix bug #352673.

=== gedit 2.20.1 ===

2007-09-26  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:
